--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,47 @@
   </head>
   <body>
     <div class="container">
+      <header class="navbar">
+        <a href="index.html" class="logo">
+            <img src="./i/logo.png"></a>
+  
+   
+    <!--   DESKTOP menu START   -->
+       <nav class="menu">
+            <ul class="menu-desktop">
+              <li class="menu__item"><a href="#" class="menu__link">Чому ми?</a></li>
+              <li class="menu__item"><a href="#" class="menu__link">Партнери</a></li>
+              <li class="menu__item"><a href="#" class="menu__link">Благодійність</a></li>
+              <li class="menu__item"><a href="#" class="menu__link">Про нас</a></li>
+              <li class="menu__item"><a href="#" class="menu__link">Drupal</a></li>
+            </ul>
+        </nav>
+
+        <div class="header-links">
+          <div class="header-links__container">
+          <a href="#" class="header-links__link"><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35">
+           <svg class="header-links__svg" xmlns="http://www.w3.org/2000/svg">
+             <use xlink:href="i/sprite.svg#facebook" /></a>
+          <a href="#" class="header-links__link"><img src="i/instagram.svg"></a>
+          <a href="#" class="header-links__link"><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35">
+           <svg class="header-links__svg" xmlns="http://www.w3.org/2000/svg">
+             <use xlink:href="i/sprite.svg#viber" /></a>
+            </div>
+
+          <div class="number-form">
+            <p class="number-form__content">Пн-Пт з 10 до 18</p>
+            <select name="header-currency" class="header-currency">
+              <option value="usd">0 (800) 759-759</option>
+            </select>
+          </div>
+        </div>
+        
+  <!--   DESKTOP menu END   -->
+    </header>
+  
     </div>
 
+    <script src="js/jquery-3.3.1.min.js"></script>
     <!--  JavaScript here -->
     <!-- <script src="js/app.js"></script> -->
     <script src="js/script.js"></script>
