--- a/src/index.html
+++ b/src/index.html
@@ -66,8 +66,14 @@
             <img class="slider-top__vector slider-top__vector_third" src="i/slider-vector3.png">
             <img class="slider-top__vector slider-top__vector_fourth" src="i/slider-vector4.png">
             <img class="slider-top__vector slider-top__vector_fifth" src="i/slider-vector5.png">
+            <a href="#" class="slider-top__link-info">
+              <p class="slider-top__link-description">Дізнатися більше</p>
+              <span><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35">
+                <svg class="header-links__svg" xmlns="http://www.w3.org/2000/svg">
+                  <use xlink:href="i/sprite.svg#arrow" /></span>
+            </a>
           </div> <!-- /.slider-top-->
-          </div>
+          </div> 
           <div class="slick-slide">
           <div class="slider-top">
             <div class="slider-top__content-container">
@@ -83,8 +89,14 @@
             <img class="slider-top__vector slider-top__vector_third" src="i/slider-vector3.png">
             <img class="slider-top__vector slider-top__vector_fourth" src="i/slider-vector4.png">
             <img class="slider-top__vector slider-top__vector_fifth" src="i/slider-vector5.png">
+            <a href="#" class="slider-top__link-info">
+              <p class="slider-top__link-description">Дізнатися більше</p>
+              <span><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35">
+                <svg class="header-links__svg" xmlns="http://www.w3.org/2000/svg">
+                  <use xlink:href="i/sprite.svg#arrow" /></span>
+            </a>
           </div> <!-- /.slider-top-->
-          </div>
+          </div> 
           <div class="slick-slide">
           <div class="slider-top">
             <div class="slider-top__content-container">
@@ -100,8 +112,14 @@
             <img class="slider-top__vector slider-top__vector_third" src="i/slider-vector3.png">
             <img class="slider-top__vector slider-top__vector_fourth" src="i/slider-vector4.png">
             <img class="slider-top__vector slider-top__vector_fifth" src="i/slider-vector5.png">
+            <a href="#" class="slider-top__link-info">
+              <p class="slider-top__link-description">Дізнатися більше</p>
+              <span><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35">
+                <svg class="header-links__svg" xmlns="http://www.w3.org/2000/svg">
+                  <use xlink:href="i/sprite.svg#arrow" /></span>
+            </a>
           </div> <!-- /.slider-top-->
-          </div>
+          </div> 
           <div class="slick-slide">
           <div class="slider-top">
             <div class="slider-top__content-container">
@@ -117,8 +135,14 @@
             <img class="slider-top__vector slider-top__vector_third" src="i/slider-vector3.png">
             <img class="slider-top__vector slider-top__vector_fourth" src="i/slider-vector4.png">
             <img class="slider-top__vector slider-top__vector_fifth" src="i/slider-vector5.png">
+            <a href="#" class="slider-top__link-info">
+              <p class="slider-top__link-description">Дізнатися більше</p>
+              <span><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35">
+                <svg class="header-links__svg" xmlns="http://www.w3.org/2000/svg">
+                  <use xlink:href="i/sprite.svg#arrow" /></span>
+            </a>
           </div> <!-- /.slider-top-->
-          </div>
+          </div> 
           <div class="slick-slide">
           <div class="slider-top">
             <div class="slider-top__content-container">
@@ -134,8 +158,14 @@
             <img class="slider-top__vector slider-top__vector_third" src="i/slider-vector3.png">
             <img class="slider-top__vector slider-top__vector_fourth" src="i/slider-vector4.png">
             <img class="slider-top__vector slider-top__vector_fifth" src="i/slider-vector5.png">
+            <a href="#" class="slider-top__link-info">
+              <p class="slider-top__link-description">Дізнатися більше</p>
+              <span><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35">
+                <svg class="header-links__svg" xmlns="http://www.w3.org/2000/svg">
+                  <use xlink:href="i/sprite.svg#arrow" /></span>
+            </a>
           </div> <!-- /.slider-top-->
-          </div>
+          </div> 
         </div>
 
     </div> <!-- Post-top -->
