--- a/src/index.html
+++ b/src/index.html
@@ -190,6 +190,21 @@
         </div>
       </div>
     </div>
+    <div class="about">
+      <div class="info-container">
+        <h2 class="info-container__heading">Найкраща компанія для роботи в IT</h2>
+        <h3 class="info-container__title">Вебстудія Глянець — команда, яка налічує понад 50 професіоналів</h3>
+        <p class="info-container__content">Наша компанія має власний офіс, хостинг, проводить навчання кадрів, здійснює контроль якості кожного проєкту.</p>
+        <p class="info-container__content">За час своєї роботи ми розробили сотні інтернет-магазинів, які працюють у всіх країнах світу, продаючи своїм замовникам тисячі товарів на добу.</p>
+        <p class="info-container__content"><span class="info-container__span">Глянець</span> — це надійність. Перевірено досвідом!</p>
+        <div class="info-container__links">
+          <a href="#" class="info-container__link"><img class="info-container__img-link" src="i/ukraine-communities.png" alt=""></a>
+          <a href="#" class="info-container__link"><img class="info-container__img-link" src="i/alternative.png" alt=""></a>
+          <a href="#" class="info-container__link"><img class="info-container__img-link info-container__img-link_third" src="i/helpdesk.png" alt=""></a>
+        </div>
+      </div>
+      <img class="info-container__img" src="i/about-img.png" alt="">
+    </div>
   
     <script src="js/jquery-3.3.1.min.js"></script>
     <!--  JavaScript here -->
